Closed
Bug 129306
Opened 23 years ago
Closed 22 years ago
invisible layer not hiding flash content
Categories
(Core Graveyard :: Plug-ins, defect, P2)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.4alpha
People
(Reporter: sean.schneyer, Assigned: peterl-bugs)
References
()
Details
(Keywords: testcase, topembed+)
Attachments
(2 files, 4 obsolete files)
1.28 KB,
text/html
|
Details | |
587 bytes,
patch
|
roc
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:0.9.8+)
Gecko/20020301
BuildID: 2002030103
When viewing http://www.dfwairport.com/ a fake pop-up ad is displayed using
layers. When you close the ad, the border dissappears (becomes invisible) as
expected, however the flash portion becomes embedded within the page wherever
the ad is closed.
Reproducible: Always
Steps to Reproduce:
1. Go to http://www.dfwairport.com/
2. Move the "pop-up" ad around the screen.
3. Close the ad by clicking on the "X".
4. Watch the flash portion of the pop-up get embedded in the page
Actual Results: The flash portion of the ad does not dissappear when the layer
is made invisible.
Expected Results: The entire pop-up should be made invisible.
I wans't sure which component this really belonged to since there are so many
things to choose from (plug-in, javascript, etc).
Comment 1•23 years ago
|
||
Compositor. We already have bugs on this, iirc. See also bug 44993
Assignee: asa → kmcclusk
Component: Browser-General → Compositor
QA Contact: doronr → petersen
Reporter | ||
Comment 2•23 years ago
|
||
I just looked through the 108 open Compositor bugs and didn't find anything
matching the one that I reported. Also, the problem described in bug 44993
appears to be fixed. The test case for that bug worked fine for me. Perhaps
there is a problem with programatically changing a plug-in from an visible state
to a invisible state?
If I get some time later this week, I'll see if I can put together a testcase.
Comment 3•23 years ago
|
||
Confirming Win2k Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:0.9.8)
Gecko/20020204
Comment 4•23 years ago
|
||
Sorry for the dual attachments, I added some text to the layer... you'll see
the text disappear and reappear but the swf never goes away....
Reporter | ||
Comment 5•23 years ago
|
||
Here is the same testcase with the <DIV> starting out as hidden. Here you see
that the flash object is hidden along with the text, but when you try to make
it visible only the text shows up.
So, basically if the plug-in start out as hidden, it stays hidden. If it starts
out visible, it stays visible.
Reporter | ||
Comment 6•23 years ago
|
||
Any chance of this ever becoming a confirmed bug? The test cases clearly show
that there is a problem.
Comment 7•23 years ago
|
||
Confirming with win98, build 2002032803
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 8•23 years ago
|
||
Reassigning to peterl. Appears to be plugin issue.
Assignee: kmcclusk → peterl
Comment 9•23 years ago
|
||
Yup, looks like in nsObjectFrame::DidReflow we unconditionally show the view
Comment 10•23 years ago
|
||
this patch fixes showing/hiding plugins through CSS visibility
Comment 11•23 years ago
|
||
Comment on attachment 78809 [details] [diff] [review]
patch to show/hide view accordingly
Okay, this patch needs a little work:
First, it doesn't work on Mac at all.
Second, doesn't work if plugin is initially hidden
From problem #1, I don't know how to "hide" a plugin on Mac. Simply cutting off
it's Paint() isn't enough to stop animations. Killing the timer does do the
trick, but then I can't restart it :(
From problem #2, our code only creates a view and a widget at startup. We'll
have to somehow do this later if we detect we're visible but have no view.
Hm...second thought...maybe we should go with this pretty low-risk patch as it
is that at least lets you hide plugins on Windows and open new bugs on both
these more complicated issues. Thoughts?
Attachment #78809 -
Flags: needs-work+
Comment 12•23 years ago
|
||
Comment on attachment 78809 [details] [diff] [review]
patch to show/hide view accordingly
Patch looks fine to me, but I cannot comment on the approach you suggest. I
guess fixing this as a Windows fix, and filing a bug for the Mac fix is OK.
sr=attinasi (cleared the needs work checkbox too)
Attachment #78809 -
Flags: needs-work+ → superreview+
Comment 13•23 years ago
|
||
Comment on attachment 78809 [details] [diff] [review]
patch to show/hide view accordingly
OK, having it on Windows is better than nothing, r=av
Attachment #78809 -
Flags: review+
Comment 14•23 years ago
|
||
Patch in trunk, marking FIXED.
New bugs open:
(Mac) http://bugzilla.mozilla.org/show_bug.cgi?id=137230
(testcase #3) http://bugzilla.mozilla.org/show_bug.cgi?id=137231
Since this effects CSS visibility style, do we want to take this on the 1.0
branch? If so, please nominate with appropriate keywords.
Reporter | ||
Comment 15•23 years ago
|
||
Sorry to take so long to check up on this, but this bug isn't completely fixed.
The test case in comment #4 works fine, however, the test case that I included
in comment #5 still doesn't work.
I'm currently using Build 2002041503 on Win2K. I didn't reopen this bug to give
others a chance to verify that I'm not just missing something here.
Reporter | ||
Comment 16•23 years ago
|
||
Okay, I'm obviously braindead. I now see that a new bug has already been opened
for the scenario I pointed out. Sorry for the extra spam.
I can confirm that the other part of the bug is actually fixed on Win2K Build ID
2002041503.
Comment 17•23 years ago
|
||
this is used quite often with dynamic HTML and could be a high exposure issue
Comment 18•23 years ago
|
||
Chris - Can you verify this is fixed, and does not cause any other regressions?
Target Milestone: mozilla1.0.1 → mozilla1.0
Comment 19•23 years ago
|
||
Maybe I'm not so smart, but it seems to me that it still hasn't been fixed in
the 2002041711 build (moz 1.0 RC1) if I try out the "simple test case"..
Or have you guys just assigned the bugs for someone else to fix ?
Comment 20•23 years ago
|
||
Ok, I can verify that both first and second test case work in the Windows April
18th trunk build (2002-04-18-03). The third test case appears just like comment
Perhaps we create a new bug for that one ?
Comment 21•23 years ago
|
||
I meant to say, Comment 5 is still occuring for me.
Comment 22•23 years ago
|
||
adding adt1.0.0-. Let's look at this again for RTM. Raising impact for the
moment. How prevalent are pop flash ads?
Comment 23•23 years ago
|
||
Ok, I see that there is a bug for comment 5. Marking this bug verified fixed.
Status: RESOLVED → VERIFIED
Comment 24•23 years ago
|
||
*** Bug 142690 has been marked as a duplicate of this bug. ***
Comment 25•23 years ago
|
||
Marking topembed. This is important for evangelism. This is also one
requirement for embeded products. Here are two reasons that is clear now: (1)
Advertising industry, specifically Rich Media vendors, can use their ad content
and control style positioning and visibility. (2) We have one major topsite in
from the Latin America evangelism effort (bank).
Keywords: topembed
Updated•23 years ago
|
Whiteboard: [ADT2 rtm] → [ADT2 rtm] [PL RTM]
Comment 26•23 years ago
|
||
Removing minus from adt1.0.0 to renominate.
Jud, does this need a topembed+?
The patch in this bug is also needed for bug 120875.
Updated•23 years ago
|
Comment 27•23 years ago
|
||
Comment on attachment 78809 [details] [diff] [review]
patch to show/hide view accordingly
a=rjesup@wgate.com (make sure it's in trunk too)
Attachment #78809 -
Flags: approval+
Comment 28•23 years ago
|
||
adding adt1.0.0+ for checkin to the 1.0 branch.
Comment 30•23 years ago
|
||
Verified on Windows Me May 22 branch build (2002-05-22-08).
Keywords: verified1.0.0
Comment 31•22 years ago
|
||
Reopening, this bug has reappeared on Win32 in 1.4a. Works on OSX.
Status: VERIFIED → REOPENED
Component: GFX → Plug-ins
Priority: -- → P2
QA Contact: petersen → bmartin
Resolution: FIXED → ---
Whiteboard: [ADT2 rtm] [PL RTM],custrtm-
Target Milestone: mozilla1.0 → mozilla1.4alpha
Comment 32•22 years ago
|
||
Updated•22 years ago
|
Attachment #72887 -
Attachment is obsolete: true
Attachment #72888 -
Attachment is obsolete: true
Attachment #72978 -
Attachment is obsolete: true
Attachment #78809 -
Attachment is obsolete: true
Comment 33•22 years ago
|
||
This is likely a regression from bug 157445.
Comment 34•22 years ago
|
||
Here's a patch that adds some virtual SupportsVisibilityHidden lovin' to the
object frame like was done for the ListControlFrame in bug 157445.
Updated•22 years ago
|
Attachment #119868 -
Flags: superreview?(bzbarsky)
Attachment #119868 -
Flags: review?(roc+moz)
Comment 35•22 years ago
|
||
Comment on attachment 119868 [details] [diff] [review]
patch for new problem
<sigh>. Yeah, we need this. :(
Attachment #119868 -
Flags: superreview?(bzbarsky) → superreview+
Attachment #119868 -
Flags: review?(roc+moz) → review+
Comment 36•22 years ago
|
||
checked into trunk, marking FIXED.
Status: REOPENED → RESOLVED
Closed: 23 years ago → 22 years ago
Resolution: --- → FIXED
Comment 37•22 years ago
|
||
Actually, using FizzillaMach/2003040809, the hidden Flash object shows up on
mousing over the "Create," "See," and "About" buttons.
Comment 38•22 years ago
|
||
flash on http://msnbc.com/news/default.asp is hidden when a menu is opened with
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4b) Gecko/20030411 and
File name: NPSWF32.dll Shockwave Flash 6.0 r79
Comment 39•22 years ago
|
||
Marking Verified Fixed
testcase in Comment #5 worked as expected in latest Mozilla (ID: 2003051204)
Status: RESOLVED → VERIFIED
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•